# cncalc

./: CHANGELOG.md  Cargo.toml  README.md  Test.csv  Test.parquet
calculator/: Cargo.toml
calculator/src/: lib.rs  main.rs
minmax/: Cargo.toml
minmax/src/: args.rs  lib.rs  main.rs
src/: args.rs  lib.rs  main.rs
