[package]
name = "cncalc"
version = "0.0.1"
edition = "2021"
authors = ["Dylan Wright"]
description = "Calculate distances between all combinations of stars in a cluster."
rust-version = "1.66.0"

[dev-dependencies]
assert_float_eq = "1.1.3"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
csv = "1.1.6"
indicatif = "0.17.3"
ndarray = "0.15.6"
polars = { version = "0.26.1", features = ["lazy", "csv-file", "parquet"] }
polars-core = "0.26.1"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[profile.release]
strip = true      # Automagically strip symbols from the library
opt-level = "z"   # Highest optimisation
lto = true        # Enable link time optimisation
codegen-units = 1 # Maximise size reduction optimisation
panic = 'abort'   # Aborts on panic
