[workspace]
members = ["calculator", "minmax"]

[workspace.package]
version = "0.0.2"
edition = "2021"
authors = ["Dylan Wright"]
rust-version = "1.70.0"

[workspace.registeries.crates-io]
protocol = "sparse"

[workspace.dependencies]
clap = { version = "4.1.4", features = ["derive"] }
csv = "1.1.6"
decorum = "0.3.1"
indicatif = "0.17.3"
ndarray = "0.15.6"
polars = { version = "0.30.0", features = ["lazy", "parquet"] }

[build]
target = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-gnu"]

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[profile.release]
strip = true      # Automagically strip symbols from the library
opt-level = "z"   # Highest optimisation
lto = true        # Enable link time optimisation
codegen-units = 1 # Maximise size reduction optimisation
panic = 'abort'   # Aborts on panic
