[package]
name = "minmax"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Find minimum and maximum distances for each star in the cluster."
rust-version.workspace = true

[registeries.crates-io]
protocol.workspace = true

[dependencies]
clap.workspace = true
indicatif.workspace = true
ndarray.workspace = true
polars.workspace = true
polars-core.workspace = true

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[profile.release]
strip = true      # Automagically strip symbols from the library
opt-level = "z"   # Highest optimisation
lto = true        # Enable link time optimisation
codegen-units = 1 # Maximise size reduction optimisation
panic = 'abort'   # Aborts on panic
